<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hotspots">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <SeekBar
        android:id="@+id/distanceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:max="50"
        android:progress="10" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_10_km"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/notesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_notes"
            android:minHeight="48dp"
            android:textColorHint="#263238" />

        <EditText
            android:id="@+id/birdNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_bird_name"
            android:minHeight="48dp"
            android:textColorHint="#4E342E" />

        <Button
            android:id="@+id/saveObservationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_observation"/>

        <Button
            android:id="@+id/viewObservationsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_observations"/>
    </LinearLayout>
</RelativeLayout>