<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account_circle"/>


        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="20sp"
            android:padding="18dp"/>

        <TextView
            android:id="@+id/haveaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="20sp"
            android:padding="18dp"/>


    </LinearLayout>



